overflow issue fixed

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -169,7 +169,7 @@
 }
 
 .rdt_TableBody {
-    /* overflow: auto; */
+    overflow: auto;
     height: 410px;
 }
 
